appId: ${APP_ID}
---

- tapOn:
    id: 'TabBar.Home'
- extendedWaitUntil:
    visible: 'TOTAL BALANCE'

- tapOn:
    id: 'ActionButton'
- extendedWaitUntil:
    visible:
      id: 'ActionItem.0'
- waitForAnimationToEnd

- tapOn:
    text: 'Account'
- extendedWaitUntil:
    visible: 'New Account'

- tapOn:
    id: 'CreateAccount.CASH'
- extendedWaitUntil:
    visible: 'ACCOUNT NAME & ICON'

- tapOn:
    id: 'AccountForm.NameInput'
- inputText: 'E2E Account'

- tapOn:
    id: 'CreateAccount.Amount'
- inputText: '500'

- tapOn:
    id: 'AccountForm.SubmitButton'

- extendedWaitUntil:
    visible: 'TOTAL BALANCE'

- assertVisible: 'E2E Account'
