appId: ${APP_ID}
---

- runFlow: subflows/enter-app.flow.yaml

- runFlow: subflows/navigate-to-settings.flow.yaml

- scrollUntilVisible:
    element:
      id: 'SettingsPage.ManageCategoriesCard'
    direction: DOWN
    speed: 20
- tapOn:
    id: 'SettingsPage.ManageCategoriesCard'
- extendedWaitUntil:
    visible: 'Categories'

# --- Create Category ---

- tapOn:
    id: 'ActionButton'
- waitForAnimationToEnd

- tapOn: 'Category'
- waitForAnimationToEnd

- tapOn:
    id: 'CategoryForm.Input'
- inputText: 'E2E Category'

- tapOn:
    id: 'CategoryForm.Submit'

- extendedWaitUntil:
    visible: 'E2E Category, Swipe left'
    timeout: 10000

# --- Edit Category ---

- tapOn: 'E2E Category, Swipe left'
- waitForAnimationToEnd

- tapOn:
    id: 'CategoryForm.Input'
- eraseText: 50
- inputText: 'E2E Edited Category'

- tapOn:
    id: 'CategoryForm.Submit'

- extendedWaitUntil:
    visible: 'E2E Edited Category, Swipe left'
    timeout: 10000

# --- Delete Category ---

- swipe:
    from:
      text: 'E2E Edited Category, Swipe left'
    direction: LEFT

- tapOn:
    id: 'DeletableRow.DeleteButton'

- tapOn: 'Delete'

- waitForAnimationToEnd

- assertNotVisible: 'E2E Edited Category, Swipe left'
